fix css padding between the right click menu's sections and change the colour of the right adornment (usually a right arrow) to be a bit lighter so it doesnt stand out too much

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -549,7 +549,7 @@ body {
 	font-family: var(--cool-font) !important;
 	content: '\2713';
 	color: var(--color-main-text) !important;
-    width: 1em !important;
+	width: 1em !important;
 }
 .context-menu-icon-lo-checkmark:before {
 	content: '\2713';
@@ -564,7 +564,7 @@ body {
 	color: var(--color-text-dark);
 }
 .context-menu-submenu:after {
-	border-color: transparent transparent transparent var(--color-text-darker) !important;
+	border-color: transparent transparent transparent var(--color-text-dark) !important;
 	right: 10px;
 }
 .context-menu-submenu {
