--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -730,8 +730,11 @@ input[type='checkbox']:checked.autofilter, .jsdialog input[type='checkbox']:chec
 	margin: 0px 4px;
 	border-radius: var(--border-radius);
 }
-.context-menu-separator {
+.context-menu-separator.context-menu-separator {
 	border-bottom: 1px solid var(--color-border-lighter);
+	padding: 3px 12px;
+	margin-bottom: 6px;
+	border-radius: 0;
 }
 
 .context-menu-item.context-menu-disabled {
